# rust-cli-template

./: .boilerplatoignore  .env.boiler  Cargo.toml  Cargo.toml.boiler  README.md  README.md.boiler  boilerplato.yml  install.sh  install.sh.boiler  tusk.yml  tusk.yml.boiler
scripts/: upload-artifacts.sh  upload-artifacts.sh.boiler
src/: main.rs  main.rs.boiler
src/constants/: mod.rs.boiler
