[package]
name = "rust-cli-template"
version = "0.1.0"
description = "A Boilerplato template for Rust CLI application."
homepage = "https://github.com/boilerplato/rust-cli-template"
repository = "https://github.com/boilerplato/rust-cli-template"
keywords = ["boilerplato", "rust", "template", "cli"]
categories = ["command-line-utilities", "template-engine"]
authors = ["Rousan Ali <hello@rousan.io>"]
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
clap = "2.33"
colored = "1.9"
lazy_static = "1.4.0"
uuid = { version = "0.8", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"